# Nova

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
docs/: roadmap.md
docs/builtins/: _INDEX_.md  conversions.md
docs/releases/: _CHANGELOG_.md  v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.5.1.md  v0.6.0.md  v0.6.1.md  v0.7.0.md  v0.8.0.md  v0.9.0.md
docs/stdlib/: _INDEX_.md  array.md  input.md  math.md  string.md
docs/syntax/: _CURRENT_.md  v0.1.md  v0.2.md  v0.3.md  v0.4.md  v0.5.md  v0.6.md  v0.7.md  v0.9.md
examples/v0.3/: _v0.3_full_demo.nova  array_access.nova  array_mutation.nova  arrays.nova  multi_type_arrays.nova  nested_arrays.nova  typed_arrays.nova
examples/v0.6/: _v0.6_full_demo.nova  break_statement.nova  continue_statement.nova
examples/v0.7/: _v0.7_full_demo.nova  early_returns.nova  function_calls.nova  function_declarations.nova  function_expressions.nova  function_scope.nova  global_scope.nova  nested_function_calls.nova  parameters.nova  recursion.nova  return_values.nova  variable_shadowing.nova
examples/v0.9/: _v0.9_full_demo.nova  exported_constants.nova  exported_functions.nova  exported_schemas.nova  import_aliases.nova  module_aliases.nova  module_imports.nova  multiline_imports.nova  selective_imports.nova  stdlib_math.nova
nova/: __init__.py  api.py  cli.py  pipeline.py
nova/ast/: __init__.py  base.py  expressions.py  literals.py  statements.py  types.py
nova/errors/: __init__.py  base.py  lexer_errors.py  parser_errors.py  runtime_errors.py  type_errors.py
nova/interpreter/: __init__.py  arrays.py  (+7 more)
(+27 files in other folders)
